prace nad webservice

--- a/npkpir_23/web/manager/sub/tablica.xhtml
+++ b/npkpir_23/web/manager/sub/tablica.xhtml
@@ -129,7 +129,7 @@
 
 <h:form>
          <p:growl />
-         <p:commandButton value="nowey pit" actionListener="#{zestawienieView.nowypit()}" global="true" update="@form"/>
+         <p:commandButton value="wsdl" actionListener="#{wsKadryFakturaPozycjaView.init()}" global="true" update="@form"/>
          <p:messages><p:autoUpdate/></p:messages>
     </h:form> 
 <!--
