--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_podatek.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_podatek.xhtml
@@ -55,7 +55,8 @@
                  <bcf:outputpl value="#{itempasekpod.podstawaopodatkowaniazagranicawaluta}"/>
             </p:column>
             <p:column headerText="podatek zagr. wal" style="text-align: center;">
-                <p:inputNumber value="#{itempasekpod.podatekdochodowyzagranicawaluta}"  size="10"  maxlength="7" decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right" styleClass="polepodatkuwpln">
+                <p:inputNumber value="#{itempasekpod.podatekdochodowyzagranicawaluta}"  size="10"  maxlength="7" decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right" styleClass="polepodatkuwpln"
+                               rendered="#{itempasekpod.podstawaopodatkowaniazagranicawaluta gt 0.0}">
                     <p:ajax event="change" partialSubmit="true" global="false" listener="#{pasekwynagrodzenView.editpasek(itempasekpod)}" update="@(.polepodatkuwpln)"/>
                 </p:inputNumber>
             </p:column>
