--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
@@ -87,8 +87,8 @@
                             </p:panelGrid>
                     </h:form>
                     <h:form  styleClass="formadmin" id="KalendarzmiesiacCreateRokForm">
-                        <p:panelGrid columns="2" rendered="#{wpisView.uzer.login eq '2'}">
-<!--                        <p:panelGrid columns="2">-->
+<!--                        <p:panelGrid columns="2" rendered="#{wpisView.uzer.login eq '2'}">-->
+                        <p:panelGrid columns="2">
                             <p:outputLabel value="generuj kalendarz za rok" for="rokkal" />
                             <p:commandButton id="rokkal" value="generuj" styleClass="buttonnorm" global="true" actionListener="#{kalendarzmiesiacView.generujrok()}" update="KalendarzmiesiacSaRokForm KalendarzmiesiacListForm"/>
                         </p:panelGrid>
