uprawszczamy robienie deklaracji vtalikwidacja dailogu wysylka

--- a/npkpir_23/web/ksiegowa/sub/vatzest.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/vatzest.xhtml
@@ -209,9 +209,9 @@
         <p:tab title="deklaracja VAT">
             <ui:include src="/wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml"/> 
         </p:tab>
-        <p:tab title="wysyłka">
+<!--        <p:tab title="wysyłka">
             <ui:include src="/wspolny/sub/vatdowyslania.xhtml"/>  
-        </p:tab>
+        </p:tab>-->
         
     </p:tabView>
 
