--- a/npkpir_23/web/ksiegowaFK/sub/menu/menurejestry.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menurejestry.xhtml
@@ -14,9 +14,9 @@
                             <p:menuitem value="sporządź deklarację VAT-7" oncomplete="PF('dialog_deklaracje_vat').show();" >
                                 <f:actionListener binding="#{ewidencjaVatView.stworzenieEwidencjiZDokumentowFK(WpisView.getPodatnikObiekt(), null)}"/>
                             </p:menuitem>
-                            <p:menuitem value="wyslij deklarację VAT-7" oncomplete="PF('dialog_deklaracje_vat_wysylka').show();" >
+<!--                            <p:menuitem value="wyslij deklarację VAT-7" oncomplete="PF('dialog_deklaracje_vat_wysylka').show();" >
                                 
-                            </p:menuitem>
+                            </p:menuitem>-->
                              <p:menuitem value="przeglądaj wysłane deklaracje VAT-7" oncomplete="PF('dialog_deklaracje_vat_status').show();" >
                             </p:menuitem>
                             <p:menuitem value="deklaracje VAT-UE" oncomplete="PF('dialog_deklaracje_vatue_status').show();" >
