--- a/npkpir_23/web/wspolny/sub/faktura.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura.xhtml
@@ -67,6 +67,7 @@
         <ui:include src="faktura/faktura_okresowe.xhtml"/>
         <ui:include src="faktura/faktura_okresowe_2.xhtml"/>
         <ui:include src="faktura/faktura_zestawienie.xhtml"/>
+        <ui:include src="faktura/faktura_kadry.xhtml"/>
     </p:tabView>
     </c:if>
  
