--- a/npkpir_23/web/guest/sub/zestawienieRok_dane.xhtml
+++ b/npkpir_23/web/guest/sub/zestawienieRok_dane.xhtml
@@ -15,7 +15,7 @@
             </p:column>
         </p:dataTable>
 
-        <p:dataTable  var="wpis" value="#{zestawienieView.styczen}" id="dokumentystyczen" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wstyczen}" id="dokumentystyczen" > 
             <p:column headerText="styczeń" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -26,7 +26,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.luty}" id="dokumentyluty" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wluty}" id="dokumentyluty" > 
             <p:column headerText="luty" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -37,7 +37,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.marzec}" id="dokumentymarzec" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wmarzec}" id="dokumentymarzec" > 
             <p:column headerText="marzec" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -48,7 +48,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.kwiecien}" id="dokumentykwiecien"> 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wkwiecien}" id="dokumentykwiecien"> 
             <p:column headerText="kwiecień" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -59,7 +59,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.maj}" id="dokumentymaj" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wmaj}" id="dokumentymaj" > 
             <p:column headerText="maj" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -70,7 +70,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.czerwiec}" id="dokumentyczerwiec" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wczerwiec}" id="dokumentyczerwiec" > 
             <p:column headerText="czerwiec" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -81,7 +81,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.ipolrocze}" id="dokumentyIpolrocze" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wIpolrocze}" id="dokumentyIpolrocze" > 
             <p:column headerText="I półrocze" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -97,7 +97,7 @@
                 <h:outputText value="#{wpis}" style="#{wpis eq 'razem przych.' ? 'color: red' : wpis eq 'razem koszty' ? 'color: blue' : null }"/>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.lipiec}" id="dokumentylipiec" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wlipiec}" id="dokumentylipiec" > 
             <p:column headerText="lipiec" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -109,7 +109,7 @@
             </p:column>
         </p:dataTable>
        
-        <p:dataTable  var="wpis" value="#{zestawienieView.sierpien}" id="dokumentysierpien" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wsierpien}" id="dokumentysierpien" > 
             <p:column headerText="sierpień" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -121,7 +121,7 @@
             </p:column>
         </p:dataTable>
         
-        <p:dataTable  var="wpis" value="#{zestawienieView.wrzesien}" id="dokumentywrzesien" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wwrzesien}" id="dokumentywrzesien" > 
             <p:column headerText="wrzesień" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -132,7 +132,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.pazdziernik}" id="dokumentypazdziernik" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wpazdziernik}" id="dokumentypazdziernik" > 
             <p:column headerText="pazdziernik" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -143,7 +143,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.listopad}" id="dokumentylistopad" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wlistopad}" id="dokumentylistopad" > 
             <p:column headerText="listopad" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -154,7 +154,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-           <p:dataTable  var="wpis" value="#{zestawienieView.grudzien}" id="dokumentygrudzien" > 
+           <p:dataTable  var="wpis" value="#{zestawienieView.wgrudzien}" id="dokumentygrudzien" > 
             <p:column headerText="grudzień" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -165,7 +165,7 @@
                 </h:outputText>
             </p:column>
         </p:dataTable>
-          <p:dataTable  var="wpis" value="#{zestawienieView.IIpolrocze}" id="dokumentyIIpolrocze" > 
+          <p:dataTable  var="wpis" value="#{zestawienieView.wIIpolrocze}" id="dokumentyIIpolrocze" > 
             <p:column headerText="II półrocze" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
@@ -181,7 +181,7 @@
                 <h:outputText value="#{wpis}" style="#{wpis eq 'razem przych.' ? 'color: red' : wpis eq 'razem koszty' ? 'color: blue' : null }"/>
             </p:column>
         </p:dataTable>
-        <p:dataTable  var="wpis" value="#{zestawienieView.rok}" id="dokumentyrok" > 
+        <p:dataTable  var="wpis" value="#{zestawienieView.wrok}" id="dokumentyrok" > 
             <p:column headerText="rok" id="idColumn" >  
                 <h:outputText value="#{wpis}" style="float: right;">
                     <f:convertNumber maxFractionDigits="2"
